fix: visible button close

--- a/blocks/modal/__button-close/modal__button-close.css
+++ b/blocks/modal/__button-close/modal__button-close.css
@@ -1,4 +1,6 @@
 .modal__button-close {
+  background: url("../../../images/plus.svg") no-repeat center;
+  background-size: cover;
   padding: 0;
   cursor: pointer;
   position: absolute;
@@ -7,7 +9,6 @@
   min-height: 48.25px;
   min-width: 48.25px;
   transform: rotate(-45deg);
-  background: none;
   border: none;
 }
 
